@@ -21,6 +21,8 @@ v6.4.0:
   - provide custom HANS banner and launcher
 - add support for Pokemon Sinking Sapphire
   - provide custom HANS banner and launcher
+- update download link for Pokemon Rutile Ruby to v2.1
+- update download link for Pokemon Star Sapphire to v2.1
 
 v6.3.0:
 - supply ctrtool (32 and 64 bit versions)
